--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | NFT preview card component</title>
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
+
 <body>
-    <div class="">
+  <div class="card">
     <img src="images/image-equilibrium.jpg" class="block-img" alt="" srcset="">
-  <h1>Equilibrium #3429</h1>
 
-  Our Equilibrium collection promotes balance and calm.
+    <h1>Equilibrium #3429</h1>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+    <p> Our Equilibrium collection promotes balance and calm.</p>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="div-container">
+      <div class="div-container-img">
+        <img src="images/icon-ethereum.svg" alt="criptomoeda ethereum">
+        <p>0.041 ETH</p>
+      </div>
+      <div class="div-container-img">
+        <img src="images/icon-clock.svg" alt="relogio">
+        <p> 3 days left</p>
+      </div>
+    </div>
+
+      <div class="div-hr">
+
+      </div>
+    Creation of Jules Wyvern
+
+    <div>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
   </div>
-</div>
+  </div>
 </body>
+
 </html>
