feat: finished project

--- a/index.html
+++ b/index.html
@@ -14,33 +14,39 @@
 </head>
 
 <body>
-  <div class="card">
-    <img src="images/image-equilibrium.jpg" class="block-img" alt="" srcset="">
+  <main>
+    <div class="card">
+      <img src="images/image-equilibrium.jpg" class="block-img" alt="" srcset="">
 
-    <h1>Equilibrium #3429</h1>
+      <h1>Equilibrium #3429</h1>
 
-    <p> Our Equilibrium collection promotes balance and calm.</p>
+      <p> Our Equilibrium collection promotes balance and calm.</p>
 
-    <div class="div-container">
-      <div class="div-container-img">
-        <img src="images/icon-ethereum.svg" alt="criptomoeda ethereum">
-        <p>0.041 ETH</p>
+      <div class="div-container">
+        <div class="div-container-img">
+          <img src="images/icon-ethereum.svg" alt="criptomoeda ethereum">
+          <span>0.041 ETH</span>
+        </div>
+        <div class="div-container-img">
+          <img src="images/icon-clock.svg" alt="relogio">
+          <span> 3 days left</span>
+        </div>
       </div>
-      <div class="div-container-img">
-        <img src="images/icon-clock.svg" alt="relogio">
-        <p> 3 days left</p>
-      </div>
-    </div>
 
       <div class="div-hr">
 
       </div>
-    Creation of Jules Wyvern
 
-    <div>
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <div class="div-avatar">
+        <img src="images/image-avatar.png" alt="">
+        <p>Creation of <span class="name-span"> Wesley Monaris</span></p>
+      </div>
+    </div>
+  </main>
+
+  <div class="information">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Wesley Monaris Rodrigues</a>.
   </div>
 </body>
 
