feat: finished project

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </main>
 
   <div class="information">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Wesley Monaris Rodrigues</a>.
+    Challenge by <a href="https://frontendmentor-mauve.vercel.app/" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/WesleyMR77/frontendmentor">Wesley Monaris Rodrigues</a>.
   </div>
 </body>
 
